# arcadia-tio-hs

./: .gitignore  LICENSE  README.md  arcadia-tio-hs.cabal  cabal.project.local.example
docs/: parity-inventory.generated.md  parity.md
examples/: Roundtrip.hs
scripts/: parity_inventory.py
src/Arcadia/: Tio.hs
src/Arcadia/Tio/: Error.hs  Ocb.hs  Tensor.hs  TensorFile.hs  Types.hs
src/Arcadia/Tio/Internal/: CApi.hs
test/: Main.hs  ParityInventory.hs
